--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "stdlib.h": "c",
         "string.h": "c",
-        "fortune.h": "c"
-    }
+        "fortune.h": "c",
+        "utsname.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
